--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
+    "google-scholar": "^1.5.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
@@ -13,6 +15,9 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "request": "^2.83.0",
+    "striptags": "^3.1.1",
+    "throttled-queue": "^1.0.5",
     "url-clean": "^1.0.2",
     "watson-developer-cloud": "^3.0.6"
   },
