--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.2",
     "google-scholar": "^1.5.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
@@ -30,7 +31,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/eslint/bin/eslint.js ./src/*/*/*.js"
+    "eslint": "./node_modules/eslint/bin/eslint.js ./src/*/*/*.js"
   },
   "proxy": "http://localhost:3001/",
   "devDependencies": {
