--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
   },
   "proxy": "http://localhost:3001/",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "git+https://github.com/chaijs/chai-http.git#3ea4524",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
+    "mocha": "^5.0.1",
+    "prop-types": "^15.6.0",
     "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
-    "redux-devtools": "^3.4.1",
-    "prop-types": "^15.6.0"
+    "redux-devtools": "^3.4.1"
   }
 }
